tests/neg/i1703.scala
class DuplicateClassName { () => { // error: not a legal self type clause
  { () =>
    }
}
}
